Estilizei a secção sobre

--- a/principal.html
+++ b/principal.html
@@ -60,62 +60,72 @@
         </div>
     </div>
 
-    <div id="rota"class="rota">
+    <div id="rota" class="rota">
         <div class="rota-conteudo">
             <h3>ROTA</h3>
             <p>Veja como chegar até a pousada</p>
         </div>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d117460.00822938522!2d-44.2540445!3d-23.074196450000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9c4477594fa333%3A0x449e0d7da29d468b!2sPortogalo%20Suite%20Hotel!5e0!3m2!1spt-BR!2sbr!4v1742788655720!5m2!1spt-BR!2sbr" width="100%" height="70%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d117460.00822938522!2d-44.2540445!3d-23.074196450000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9c4477594fa333%3A0x449e0d7da29d468b!2sPortogalo%20Suite%20Hotel!5e0!3m2!1spt-BR!2sbr!4v1742788655720!5m2!1spt-BR!2sbr"
+            width="100%" height="70%" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 
-    
-    <div id="quarto" class="quarto">
-        <div class="titulo-quarto">
-            <h3>SOBRE A POUSADA!</h3>
-            <p>Conheça um pouco sobre essa pousada</p>
+    <div id="sobre" class="secao-container">
+        <div class="container-topo-card">
+            <h2>SOBRE A POUSADA!</h2>
+            <p>Conheça um pouco sobre nossa pousada.</p>
         </div>
-        <div class="container-quarto">
-            <div class="cartas">
-                <div class="cartas-quarto">
-                    <h4>A Pousada</h4>
-                    <p>A Pousada Dev dispõe de estacionamento privativo gratuito, piscina ao ar livre e bar.</p>
+        <div class="container-cards">
+            <div class="card">
+                <div class="container-card-descricao">
+                    <h3>A pousada</h3>
+                    <p>
+                        A Pousada Dev dispõe de estacionamento privativo gratuito, piscina
+                        ao ar livre e bar.
+                    </p>
                 </div>
-
-                <img src="/assets/img1.jpg" alt="imagem pousada">
-            </div>
-        </div>
-        <div class="container-cartas">
-            <div class="cartas">
-                <div class="cartas-conteudo">
-                    <h4>A Nossos quartos</h4>
-                    <p>Os quartos possuem TV de tela plana a cabo, cozinha compacta e área para refeições. Além disso,
-                        as
-                        unidades da Pousada Dev contam com ar-condicionado e guarda-roupa.</p>
+                <div class="container-card-img">
+                    <img src="assets/img1.jpg" alt="Faixada" title="Faixada" />
                 </div>
-
-                <img src="/assets/img2.jpg" alt="imagem pousada">
             </div>
-        </div>
-        <div class="container-cartas">
-            <div class="cartas">
-                <div class="cartas-conteudo">
-                    <h4>Alimentação</h4>
-                    <p>A pousada serve café da manhã em estilo continental ou buffet.
-                        Nossos restaurantes funcionam 24hrs</p>
+            <div class="card">
+                <div class="container-card-descricao">
+                    <h3>Nossos quartos</h3>
+                    <p>
+                        Os quartos oferecem TV`s com canais a cabo, cozinha compacta e área de refeições,
+                        além de ar-condicionado e guarda-roupa.
+                    </p>
                 </div>
-                <img src="/assets/img3.jpg" alt="imagem pousada">
+                <div class="container-card-img">
+                    <img src="assets/img2.jpg" alt="Quartos" title="Quartos" />
+                </div>
             </div>
-        </div>
-        <div class="container-cartas">
-            <div class="cartas">
-                <div class="cartas-conteudo">
-                    <h4>Recepção</h4>
+            <div class="card">
+                <div class="container-card-descricao">
+                    <h3>Alimentação</h3>
+                    <p>
+                        A pousada serve café da manhã em estilo continental ou buffet.
+                        Nossos restaurantes funcionam 24hrs.
+                    </p>
+                </div>
+                <div class="container-card-img">
+                    <img src="assets/img3.jpg" alt="Restaurante" title="Restaurante" />
+                </div>
+            </div>
+            <div class="card">
+                <div class="container-card-descricao">
+                    <h3>Recepção</h3>
                     <p>Nossa recepção fica aberta 24hrs.</p>
                 </div>
-                <img src="/assets/img5.jpg" alt="imagem pousada">
+                <div class="container-card-img">
+                    <img src="assets/img5.jpg" alt="Recepção" title="Recepção" />
+                </div>
             </div>
         </div>
     </div>
+    </div>
+
 </body>
 
 </html>
