--- a/principal.html
+++ b/principal.html
@@ -125,7 +125,24 @@
         </div>
     </div>
     </div>
-
+    <footer>
+        <div class="rodape">
+            <h3>ENTRE EM CONTATO<br>CONOSCO:</h3>
+            <div class="rodape-contato">
+                <img src="/assets/icons/endereco.png" alt="icone-localização">
+                <p>Endereço Av. 123, 222 - Rio de Janeiro RJ</p>
+            </div>
+            <div class="rodape-contato">
+                <img src="/assets/icons/telefone.png" alt="icone-telefone">
+                <p>Cel: 5521000000000 RJ</p>
+            </div>
+            <div class="rodape-contato">
+                <img src="/assets/icons/calendario.png" alt="icone-calendário">
+                <p>Faça sua reserva pelo Booking.com</p>
+            </div>
+        </div>
+        <h4>© Copyright - PousadaDev</h4>
+    </footer>
 </body>
 
 </html>
