--- a/principal.html
+++ b/principal.html
@@ -15,7 +15,7 @@
             <div class="topo-links">
                 <a href="#sobre">Sobre</a>
                 <a href="#rota">Rota</a>
-                <a href="#quartos">Quartos</a>
+                <a href="/quartos.html">Quartos</a>
             </div>
         </div>
     </div>
