--- a/principal.html
+++ b/principal.html
@@ -34,28 +34,34 @@
         </div>
         <div class="container-info">
             <div class="card-info">
-                <div class="imagens-quartos">
-                    <img src="/assets/img1.jpg" alt="Quarto de Solteiro">
-                    <div class="conteudo-quartos">
-                        <p>QUARTO DE SOLTEIRO</p>
+                <a href="quartos.html#solteiro" target="_blank">
+                    <div class="imagens-quartos">
+                        <img src="/assets/img1.jpg" alt="Quarto de Solteiro">
+                        <div class="conteudo-quartos">
+                            <p>QUARTO DE SOLTEIRO</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="card-info">
-                <div class="imagens-quartos">
-                    <img src="/assets/img2.jpg" alt="Quarto de Casal">
-                    <div class="conteudo-quartos">
-                        <p>QUARTO DE CASAL</p>
+                <a href="quartos.html#casal" target="_blank">
+                    <div class="imagens-quartos">
+                        <img src="/assets/img2.jpg" alt="Quarto de Casal">
+                        <div class="conteudo-quartos">
+                            <p>QUARTO DE CASAL</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="card-info">
-                <div class="imagens-quartos">
-                    <img src="/assets/img3.jpg" alt="Quarto de Família">
-                    <div class="conteudo-quartos">
-                        <p>QUARTO FAMÍLIA</p>
+                <a href="quartos.html#familia" target="_blank">
+                    <div class="imagens-quartos">
+                        <img src="/assets/img3.jpg" alt="Quarto de Família">
+                        <div class="conteudo-quartos">
+                            <p>QUARTO FAMÍLIA</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
     </div>
@@ -86,7 +92,7 @@
                     </p>
                 </div>
                 <div class="container-card-img">
-                    <img src="assets/img1.jpg" alt="Faixada" title="Faixada" />
+                    <img src="assets/img1.jpg" alt="Faixada" title="Faixada">
                 </div>
             </div>
             <div class="card">
