--- a/quartos.html
+++ b/quartos.html
@@ -5,22 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quartos - Pousada Secreta</title>
+    <link rel="stylesheet" href="/css/quartos-style.css">
 </head>
 
 <body>
-    <div class="topo-quarto">
-        <div class="conteudo-topo-quarto">
+    <div class="topo">
+        <div class="conteudo-topo">
             <p>Pousada <span>Secreta</span></p>
-            <div class="topo-quarto-links">
-                <a href="#sobre">Sobre</a>
-                <a href="#rota">Rota</a>
-                <a href="/quartos.html">Quartos</a>
+            <div class="topo-links">
+                <a href="principal.html#sobre">Sobre</a>
+                <a href="principal.html#rota">Rota</a>
+                <a href="#quartos">Quartos</a>
             </div>
         </div>
     </div>
+    <div class="img-fundo-topo"></div>
+    <div class="container-quarto">
+        <div class="conteudo-quarto">
+            <h1> Pousada Secreta</h1>
+            <p>A pousada reservada em Angra dos Reis</p>
+        </div>
+    </div>
 
-    <div class="apresentacao-quartos solteiro">
-        <div class="texto-apresentacao">
+    <div id="solteiro" class="apresentacao-quartos">
+        <div id="quartos" class="texto-apresentacao">
             <h2> Quarto de solteiro</h2>
             <p>Conheça os nossos quartos de solteiro</p>
         </div>
@@ -30,8 +38,8 @@
             <img src="/assets/quarto-solteiro3.jpg" alt="quarto de solteiro 3">
         </div>
         <div class="list-quarto">
+            <p>Informações sobre o quarto:</p>
             <ul>
-                <p>Informações sobre o quarto:</p>
                 <li>TV de tela plana a cabo.</li>
                 <li>Cozinha compacta.</li>
                 <li>Área para refeições.</li>
@@ -42,7 +50,7 @@
         </div>
     </div>
 
-    <div class="apresentacao-quartos casal">
+    <div id="casal" class="apresentacao-quartos">
         <div class="texto-apresentacao">
             <h2> Quarto de Casal</h2>
             <p>Conheça nossos quartos de casal.</p>
@@ -65,7 +73,7 @@
         </div>
     </div>
 
-    <div class="apresentacao-quartos familia">
+    <div id="familia" class="apresentacao-quartos">
         <div class="texto-apresentacao">
             <h2> Quarto de familia</h2>
             <p>Conheça nossos quartos família.</p>
@@ -87,23 +95,24 @@
             </ul>
         </div>
     </div>
-    <div class="rodape-quarto">
-        <h3>ENTRE EM CONTATO<br>CONOSCO:</h3>
-        <div class="rodape-contato-quarto">
-            <img src="/assets/icons/endereco.png" alt="icone-localização">
-            <p>Endereço Av. 123, 222 - Rio de Janeiro RJ</p>
+    <footer>
+        <div class="rodape">
+            <h3>ENTRE EM CONTATO<br>CONOSCO:</h3>
+            <div class="rodape-contato">
+                <img src="/assets/icons/endereco.png" alt="icone-localização">
+                <p>Endereço Av. 123, 222 - Rio de Janeiro RJ</p>
+            </div>
+            <div class="rodape-contato">
+                <img src="/assets/icons/telefone.png" alt="icone-telefone">
+                <p>Cel: 5521000000000 RJ</p>
+            </div>
+            <div class="rodape-contato">
+                <img src="/assets/icons/calendario.png" alt="icone-calendário">
+                <p>Faça sua reserva pelo Booking.com</p>
+            </div>
         </div>
-        <div class="rodape-contato-quarto">
-            <img src="/assets/icons/telefone.png" alt="icone-telefone">
-            <p>Cel: 5521000000000 RJ</p>
-        </div>
-        <div class="rodape-contato-quarto">
-            <img src="/assets/icons/calendario.png" alt="icone-calendário">
-            <p>Faça sua reserva pelo Booking.com</p>
-        </div>
-    </div>
-    <h4>© Copyright - PousadaDev</h4>
-</footer>
+        <h4>© Copyright - PousadaDev</h4>
+    </footer>
 
 </body>
 
